<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        app:key="profile"
        app:title="@string/profile"/>

    <PreferenceCategory
        app:title="@string/connection">

        <EditTextPreference
            app:key="server_ip"
            app:title="@string/server_ip"
            app:singleLine="true"/>

        <EditTextPreference
            app:key="server_port"
            app:title="@string/server_port"
            app:inputType="number"
            app:singleLine="true"/>

        <CheckBoxPreference
            app:key="ipv6_proxy"
            app:title="@string/ipv6_proxy"
            app:summary="@string/ipv6_proxy_sum"/>

        <CheckBoxPreference
            app:key="udp_proxy"
            app:title="@string/udp_proxy"
            app:summary="@string/udp_proxy_sum"/>

        <EditTextPreference
            app:key="udp_gw"
            app:title="@string/udp_gw"
            app:singleLine="true"
            app:dependency="udp_proxy"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/ssh">

        <CheckBoxPreference
            app:defaultValue="false"
            app:key="self_ssh"
            app:title="@string/self_ssh" />

        <EditTextPreference
            app:dependency="self_ssh"
            app:key="ssh_host"
            app:singleLine="true"
            app:title="@string/ssh_host" />

        <EditTextPreference
            app:dependency="self_ssh"
            app:key="ssh_port"
            app:singleLine="true"
            app:title="@string/ssh_port"
            app:inputType="number" />

        <EditTextPreference
            app:dependency="self_ssh"
            app:key="ssh_username"
            app:singleLine="true"
            app:title="@string/ssh_username" />

        <EditTextPreference
            app:dependency="self_ssh"
            app:inputType="textLongMessage"
            app:key="ssh_pkey"
            app:singleLine="false"
            app:title="@string/ssh_pkey" />

        <EditTextPreference
            app:dependency="self_ssh"
            app:inputType="textPassword"
            app:key="ssh_password"
            app:singleLine="true"
            app:title="@string/auth_password" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/authentication">

        <CheckBoxPreference
            app:defaultValue="false"
            app:key="auth_userpw"
            app:title="@string/auth_userpw" />

        <EditTextPreference
            app:dependency="auth_userpw"
            app:key="auth_username"
            app:singleLine="true"
            app:title="@string/auth_username" />

        <EditTextPreference
            app:dependency="auth_userpw"
            app:inputType="textPassword"
            app:key="auth_password"
            app:singleLine="true"
            app:title="@string/auth_password" />

    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/advanced">

        <ListPreference
            app:key="adv_route"
            app:title="@string/adv_route"
            app:entries="@array/adv_routes"
            app:entryValues="@array/adv_routes_values"/>

        <EditTextPreference
            app:key="adv_dns"
            app:title="@string/adv_dns"
            app:singleLine="true"/>

        <EditTextPreference
            app:key="adv_dns_port"
            app:title="@string/adv_dns_port"
            app:inputType="number"
            app:singleLine="true"/>

        <CheckBoxPreference
            app:key="adv_auto_connect"
            app:title="@string/adv_auto_connect"/>

        <CheckBoxPreference
            app:key="adv_per_app"
            app:title="@string/adv_per_app"/>

        <CheckBoxPreference
            app:key="adv_app_bypass"
            app:title="@string/adv_app_bypass"
            app:summary="@string/adv_app_bypass_sum"
            app:dependency="adv_per_app"/>

        <EditTextPreference
            app:key="adv_app_list"
            app:title="@string/adv_app_list"
            app:summary="@string/adv_app_list_sum"
            app:dependency="adv_per_app"/>

    </PreferenceCategory>

</PreferenceScreen>
